fixed margin overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,17 @@
 * {
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-#container {
+.container {
   position: relative;
-  max-width: 85%;
+  max-width: 95%;
   min-height: inherit;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
 }
 
 /* Header */
@@ -19,16 +19,16 @@ header {
   padding-top: 10px;
 }
 
-#header-container {
+.header-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
   max-width: 100%;
   position: relative;
-  padding: 30px 30px;
+  padding: 30px;
 }
 
-#left-header {
+.left-header {
   width: 40%;
   display: flex;
   justify-content: center;
@@ -37,16 +37,16 @@ header {
 
 }
 
-#left-header .avatar {
+.left-header .avatar {
   background: url(../img/profile.jpg) no-repeat center;
   background-size: cover;
   border-radius: 20%;
   width: 300px;
   height: 300px;
-  margin: 10px 10px 10px 10px;
+  margin: 10px;
 }
 
-#right-header {
+.right-header {
   width: 60%;
   display: flex;
   flex-direction: column;
@@ -56,22 +56,20 @@ header {
   padding-top: 2%;
 }
 
-
-
-#right-header .name {
+.right-header .name {
   padding-bottom: 5px;
   font-weight: normal;
   text-transform: uppercase;
   font-size: 40px;
 }
 
-#right-header .career {
+.right-header .career {
   font-size: 25px;
   font-weight: normal;
   line-height: 21px;
 }
 
-#right-header .contact-button {
+.right-header .contact-button {
   border: none;
 	background: #a51b1b;
 	color: #f2f2f2;
@@ -86,21 +84,21 @@ header {
   cursor: pointer;
 }
 
-#right-header .contact-button:hover {
-  background: #f2f2f2;
+.right-header .contact-button:hover {
+  background: #fff;
 	color: #a51b1b;
 	box-shadow: inset 0 0 0 3px #a51b1b;
 }
 
-#right-header .contact-button:hover span {
+.right-header .contact-button:hover span {
   display: none;
 }
 
-#right-header .contact-button:hover::after {
+.right-header .contact-button:hover::after {
   content: "Ph: +1 (980) 267-5731";
 }
 
-#right-header .social-media a {
+.right-header .social-media a {
   text-decoration: none;
   font-size: 22px;
   cursor: pointer;
@@ -108,11 +106,11 @@ header {
   transition: 500ms ease;
 }
 
-#right-header .social-media a:hover {
+.right-header .social-media a:hover {
   color: black;
 }
 
-#right-header .social-media {
+.right-header .social-media {
   margin: 24px 0;
 }
 
@@ -123,7 +121,7 @@ header {
 .main-container {
   background: #fff;
   padding: 15px 50px;
-  margin: 5px 5px;
+  margin: 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -206,11 +204,11 @@ header {
     margin-bottom: 2%;
     font-size: 20px;
     text-align: center;
-    box-shadow: 2px 2px 2px #D9E1E7;
+    box-shadow: 2px 2px 2px #d9e1e7;
     box-sizing: border-box;
     flex-shrink: 0;
     border-radius: 3px;
-    padding: 2px 2px;
+    padding: 2px;
     margin: 2px 3px;
 }
 
@@ -226,26 +224,30 @@ header {
 /* Project items */
 
 /* Footer */
-#main-footer {
+
+.main-footer {
     padding-top: 30px;
     background: #a51b1b;
     text-align: center;
     font-weight: 600;
     font-size: 2em;
     color: #fff;
-    padding: 30px 30px;
+    padding: 30px;
     max-width: 100%;
 }
+
 /* Footer */
 
-@media screen and (min-width: 600px) and (max-width: 900px)  {
+@media screen and (min-width: 600px) and (max-width: 1024px)  {
   .project-items .project-item{
     width:98%;
   }
+
   .project-items .project-item:nth-child(odd) {
     margin-right: 3%;
     margin-left: 0;
   }
+
   .project-items .project-item:nth-child(even) {
     margin-right: 0;
     margin-left: 0;
@@ -253,14 +255,6 @@ header {
 
   .main-container .duration {
     position: relative;
-  }
-
-  header .left {
-    display: none;
-  }
-
-  header .right {
-    width: 85%;
   }
 }
 
@@ -270,27 +264,32 @@ header {
     font-size: 0.95em;
     margin: 0 2px;
   }
-  #container {
+
+  .container {
     max-width: 100%;
   }
-  #header-container {
+
+  .header-container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 10px 10px;
-    margin: 3px 3px;
+    padding: 10px;
+    margin: 3px;
   }
-  #left-header .avatar {
+
+  .left-header .avatar {
     background: url(../img/profile.jpg) no-repeat center;
     background-size: cover;
     border-radius: 20%;
     height: 120px;
     margin: 0 0;
   }
-  #right-header .contact-button {
+
+  .right-header .contact-button {
     width: 95%;
   }
+
   .project-items {
     display: flex;
     align-items: center;
@@ -298,6 +297,7 @@ header {
     flex-direction: row;
     flex-flow: row wrap;
   }
+
   .project-items .project-item{
     width:98%;
     margin-right:0;
@@ -311,13 +311,5 @@ header {
 
   .main-container .duration {
     position: relative;
-  }
-
-  header .left {
-    display: none;
-  }
-
-  header .right {
-    display: none;
   }
 }
